--- a/Grandoria/about.html
+++ b/Grandoria/about.html
@@ -170,7 +170,8 @@
         <i class="bi bi-telephone ms-3"></i> <a href="tel:+91994779277">+91 994779277</a> , <a href="tel:+914872081979">+91 4872081979</a>
       </div>
       <div>
-        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="https://instagram.com/gaurikeerthanaresidency_"><i class="bi bi-instagram"></i></a>
+        <a href="https://wa.me/919947792777" class="ms-3"><i class="bi bi-whatsapp"></i></a>
       </div>
     </div>
   </div>
