--- a/Grandoria/gallery.html
+++ b/Grandoria/gallery.html
@@ -47,8 +47,8 @@
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 994779277 , +91 4872081979</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="Whattsapp"><i class="bi bi-whattsapp"></i></a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777" class="Whattsapp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
     </div><!-- End Top Bar -->
@@ -107,114 +107,91 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="hotel-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All Photos</li>
-            <li data-filter=".filter-rooms">Rooms</li>
-            <li data-filter=".filter-amenities">Amenities</li>
-            <li data-filter=".filter-dining">Dining</li>
           </ul><!-- End Hotel Gallery Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-rooms">
+            <div class="col-lg-4 col-md-6 gallery-item isotope-item">
               <div class="gallery-wrapper">
-                <img src="assets/img/hotel/room-1.webp" class="img-fluid" alt="Deluxe Room">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927644/xxmdyknrwjzwvfkrspia.jpg" class="img-fluid" alt="Luxurious Suite">
                 <div class="gallery-overlay">
-                  <a href="assets/img/hotel/room-1.webp" class="glightbox" title="Deluxe Room with City View">
+                  <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927644/xxmdyknrwjzwvfkrspia.jpg" class="glightbox" title="">
                     <i class="bi bi-eye"></i>
                   </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
 
-            <div class="col-lg-8 col-md-6 gallery-item isotope-item filter-amenities">
+            <div class="col-lg-4 col-md-6 gallery-item isotope-item">
               <div class="gallery-wrapper">
-                <img src="assets/img/hotel/amenities-1.webp" class="img-fluid" alt="Swimming Pool">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927643/wwes8d5bg4z1br1wgetj.jpg" class="img-fluid" alt="Modern Lobby">
                 <div class="gallery-overlay">
-                  <a href="assets/img/hotel/amenities-1.webp" class="glightbox" title="Outdoor Swimming Pool with Deck">
+                  <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927643/wwes8d5bg4z1br1wgetj.jpg" class="glightbox" title="">
                     <i class="bi bi-eye"></i>
                   </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
 
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-dining">
+            <div class="col-lg-4 col-md-6 gallery-item isotope-item">
               <div class="gallery-wrapper">
-                
-                </div>
-              </div>
-            </div><!-- End Gallery Item -->
-
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-rooms">
-              <div class="gallery-wrapper">
-                <img src="assets/img/hotel/room-5.webp" class="img-fluid" alt="Executive Suite">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927643/egjotdploowxicl5oorf.jpg" class="img-fluid" alt="Elegant Dining Area">
                 <div class="gallery-overlay">
-                  <a href="assets/img/hotel/room-5.webp" class="glightbox" title="Executive Suite with Ocean View">
+                  <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927643/egjotdploowxicl5oorf.jpg" class="glightbox" title="">
                     <i class="bi bi-eye"></i>
                   </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
 
-
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-amenities">
+            <div class="col-lg-4 col-md-6 gallery-item isotope-item">
               <div class="gallery-wrapper">
-                <img src="assets/img/hotel/amenities-3.webp" class="img-fluid" alt="Spa">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927642/ducu0m6akhm6fwrwq3nb.jpg" class="img-fluid" alt="Grand Ballroom Setup">
                 <div class="gallery-overlay">
-                  <a href="assets/img/hotel/amenities-3.webp" class="glightbox" title="Luxury Spa Treatment Room">
+                  <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927642/ducu0m6akhm6fwrwq3nb.jpg" class="glightbox" title="">
                     <i class="bi bi-eye"></i>
                   </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
 
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-dining">
+            <div class="col-lg-4 col-md-6 gallery-item isotope-item">
               <div class="gallery-wrapper">
-                <img src="assets/img/hotel/dining-4.webp" class="img-fluid" alt="Bar Lounge">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/i76dwh68u6nhlpbsswkb.jpg" class="img-fluid" alt="Relaxing Poolside">
                 <div class="gallery-overlay">
-                  <a href="assets/img/hotel/dining-4.webp" class="glightbox" title="Rooftop Bar &amp; Lounge">
+                  <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/i76dwh68u6nhlpbsswkb.jpg" class="glightbox" title="">
                     <i class="bi bi-eye"></i>
                   </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
 
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-rooms">
+            <div class="col-lg-4 col-md-6 gallery-item isotope-item">
               <div class="gallery-wrapper">
-                <img src="assets/img/hotel/room-8.webp" class="img-fluid" alt="Presidential Suite">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/rdq4tzutynwdagh79r7s.jpg" class="img-fluid" alt="Cozy Guest Room">
                 <div class="gallery-overlay">
-                  <a href="assets/img/hotel/room-8.webp" class="glightbox" title="Presidential Suite Living Area">
+                  <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/rdq4tzutynwdagh79r7s.jpg" class="glightbox" title="">
                     <i class="bi bi-eye"></i>
                   </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
 
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-amenities">
+            <div class="col-lg-4 col-md-6 gallery-item isotope-item">
               <div class="gallery-wrapper">
-                <img src="assets/img/hotel/amenities-7.webp" class="img-fluid" alt="Fitness Center">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927627/qiejjeaivz1jsdhxjicl.jpg" class="img-fluid" alt="Spa and Wellness Center">
                 <div class="gallery-overlay">
-                  <a href="assets/img/hotel/amenities-7.webp" class="glightbox" title="State-of-the-Art Fitness Center">
+                  <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927627/qiejjeaivz1jsdhxjicl.jpg" class="glightbox" title="">
                     <i class="bi bi-eye"></i>
                   </a>
                 </div>
               </div>
             </div><!-- End Gallery Item -->
 
-
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-dining">
+            <div class="col-lg-4 col-md-6 gallery-item isotope-item">
               <div class="gallery-wrapper">
-                <img src="assets/img/hotel/dining-7.webp" class="img-fluid" alt="Breakfast Area">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1758381639/ix4nbwbcpm2nque7wsrx.webp" class="img-fluid" alt="Conference Facilities">
                 <div class="gallery-overlay">
-                  <a href="assets/img/hotel/dining-7.webp" class="glightbox" title="Continental Breakfast Dining Area">
-                    <i class="bi bi-eye"></i>
-                  </a>
-                </div>
-              </div>
-            </div><!-- End Gallery Item -->
-
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-rooms">
-              <div class="gallery-wrapper">
-                <img src="assets/img/hotel/room-12.webp" class="img-fluid" alt="Junior Suite">
-                <div class="gallery-overlay">
-                  <a href="assets/img/hotel/room-12.webp" class="glightbox" title="Junior Suite with Modern Amenities">
+                  <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1758381639/ix4nbwbcpm2nque7wsrx.webp" class="glightbox" title="">
                     <i class="bi bi-eye"></i>
                   </a>
                 </div>
@@ -241,10 +218,10 @@
               <span class="sitename">Gaurikeerthana</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>A108 Adam Street</p>
-              <p>New York, NY 535022</p>
+              <p>Gaurikeerthana Residency</p>
+              <p>gaurikeerthana , kerala , india</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+91 994779277 , +91 4872081979</span></p>
-              <p><strong>Email:</strong> <span>info@example.com</span></p>
+              <p><strong>Email:</strong> <span>Gaurikeerthanagvyr@gmail.com</span></p>
             </div>
           </div>
 
@@ -259,38 +236,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><a href="#">Web Design</a></li>
-              <li><a href="#">Web Development</a></li>
-              <li><a href="#">Product Management</a></li>
-              <li><a href="#">Marketing</a></li>
-              <li><a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Hic solutasetp</h4>
-            <ul>
-              <li><a href="#">Molestiae accusamus iure</a></li>
-              <li><a href="#">Excepturi dignissimos</a></li>
-              <li><a href="#">Suscipit distinctio</a></li>
-              <li><a href="#">Dilecta</a></li>
-              <li><a href="#">Sit quas consectetur</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 footer-links">
-            <h4>Nobis illum</h4>
-            <ul>
-              <li><a href="#">Ipsam</a></li>
-              <li><a href="#">Laudantium dolorum</a></li>
-              <li><a href="#">Dinera</a></li>
-              <li><a href="#">Trodelas</a></li>
-              <li><a href="#">Flexo</a></li>
-            </ul>
-          </div>
+          
 
         </div>
       </div>
@@ -313,8 +259,8 @@
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-whatsapp"></i></a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777"><i class="bi bi-whatsapp"></i></a>
         </div>
 
       </div>
