--- a/Grandoria/index.html
+++ b/Grandoria/index.html
@@ -47,8 +47,8 @@
           <span class="ms-4">+91 994779277 , +91 4872081979</span>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="instagram">Instagram</a>
-          <a href="#" class="Whatsapp">WhatsApp</a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777" class="Whatsapp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
     </div><!-- End Top Bar -->
@@ -403,64 +403,64 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="gallery-item">
-                <img src="assets/img/hotel/gallery-1.webp" alt="Luxurious Suite" class="img-fluid" loading="lazy">
-                <a href="assets/img/hotel/gallery-1.webp" class="gallery-overlay glightbox">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927644/xxmdyknrwjzwvfkrspia.jpg" alt="Luxurious Suite" class="img-fluid" loading="lazy">
+                <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927644/xxmdyknrwjzwvfkrspia.jpg" class="gallery-overlay glightbox">
                   <i class="bi bi-eye"></i>
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="gallery-item">
-                <img src="assets/img/hotel/gallery-5.webp" alt="Modern Lobby" class="img-fluid" loading="lazy">
-                <a href="assets/img/hotel/gallery-5.webp" class="gallery-overlay glightbox">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927643/wwes8d5bg4z1br1wgetj.jpg" alt="Modern Lobby" class="img-fluid" loading="lazy">
+                <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927643/wwes8d5bg4z1br1wgetj.jpg" class="gallery-overlay glightbox">
                   <i class="bi bi-eye"></i>
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="gallery-item">
-                <img src="assets/img/hotel/gallery-12.webp" alt="Elegant Dining Area" class="img-fluid" loading="lazy">
-                <a href="assets/img/hotel/gallery-12.webp" class="gallery-overlay glightbox">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927643/egjotdploowxicl5oorf.jpg" alt="Elegant Dining Area" class="img-fluid" loading="lazy">
+                <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927643/egjotdploowxicl5oorf.jpg" class="gallery-overlay glightbox">
                   <i class="bi bi-eye"></i>
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="gallery-item">
-                <img src="assets/img/hotel/gallery-8.webp" alt="Grand Ballroom Setup" class="img-fluid" loading="lazy">
-                <a href="assets/img/hotel/gallery-8.webp" class="gallery-overlay glightbox">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927642/ducu0m6akhm6fwrwq3nb.jpg" alt="Grand Ballroom Setup" class="img-fluid" loading="lazy">
+                <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927642/ducu0m6akhm6fwrwq3nb.jpg" class="gallery-overlay glightbox">
                   <i class="bi bi-eye"></i>
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="gallery-item">
-                <img src="assets/img/hotel/gallery-15.webp" alt="Relaxing Poolside" class="img-fluid" loading="lazy">
-                <a href="assets/img/hotel/gallery-15.webp" class="gallery-overlay glightbox">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/i76dwh68u6nhlpbsswkb.jpg" alt="Relaxing Poolside" class="img-fluid" loading="lazy">
+                <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/i76dwh68u6nhlpbsswkb.jpg" class="gallery-overlay glightbox">
                   <i class="bi bi-eye"></i>
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="gallery-item">
-                <img src="assets/img/hotel/gallery-3.webp" alt="Cozy Guest Room" class="img-fluid" loading="lazy">
-                <a href="assets/img/hotel/gallery-3.webp" class="gallery-overlay glightbox">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/rdq4tzutynwdagh79r7s.jpg" alt="Cozy Guest Room" class="img-fluid" loading="lazy">
+                <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/rdq4tzutynwdagh79r7s.jpg" class="gallery-overlay glightbox">
                   <i class="bi bi-eye"></i>
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="gallery-item">
-                <img src="assets/img/hotel/gallery-18.webp" alt="Spa and Wellness Center" class="img-fluid" loading="lazy">
-                <a href="assets/img/hotel/gallery-18.webp" class="gallery-overlay glightbox">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927627/qiejjeaivz1jsdhxjicl.jpg" alt="Spa and Wellness Center" class="img-fluid" loading="lazy">
+                <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927627/qiejjeaivz1jsdhxjicl.jpg" class="gallery-overlay glightbox">
                   <i class="bi bi-eye"></i>
                 </a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="gallery-item">
-                <img src="assets/img/hotel/gallery-7.webp" alt="Conference Facilities" class="img-fluid" loading="lazy">
-                <a href="assets/img/hotel/gallery-7.webp" class="gallery-overlay glightbox">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1758381639/ix4nbwbcpm2nque7wsrx.webp" alt="Conference Facilities" class="img-fluid" loading="lazy">
+                <a href="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1758381639/ix4nbwbcpm2nque7wsrx.webp" class="gallery-overlay glightbox">
                   <i class="bi bi-eye"></i>
                 </a>
               </div>
@@ -531,8 +531,8 @@
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-whatsapp"></i></a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777"><i class="bi bi-whatsapp"></i></a>
         </div>
 
       </div>
