--- a/Grandoria/location.html
+++ b/Grandoria/location.html
@@ -38,8 +38,8 @@
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 994779277 , +91 4872081979</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
     </div>
@@ -295,8 +295,8 @@
           <div class="col-lg-4 col-md-6 footer-links">
             <h4>Follow Us</h4>
             <div class="social-links mt-3">
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-whatsapp"></i></a>
+              <a href="https://instagram.com/gaurikeerthanaresidency_"><i class="bi bi-instagram"></i></a>
+              <a href="https://wa.me/919947792777"><i class="bi bi-whatsapp"></i></a>
             </div>
           </div>
 
