--- a/Grandoria/contact.html
+++ b/Grandoria/contact.html
@@ -39,8 +39,8 @@
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 994779277 , +91 4872081979</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="bi-whattsapp"><i class="bi bi-whattsapp"></i></a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777" class="bi-whattsapp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
     </div><!-- End Top Bar -->
@@ -231,8 +231,8 @@
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-whatsapp"></i></a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777"><i class="bi bi-whatsapp"></i></a>
         </div>
 
       </div>
