--- a/Grandoria/rooms.html
+++ b/Grandoria/rooms.html
@@ -47,8 +47,8 @@
           <span class="ms-4">+91 994779277 , +91 4872081979</span>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="instagram">Instagram</a>
-          <a href="#" class="WhatsApp">WhatsApp</a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777" class="WhatsApp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
     </div><!-- End Top Bar -->
@@ -270,8 +270,8 @@
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-whatsapp"></i></a>
+          <a href="https://instagram.com/gaurikeerthanaresidency_"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/919947792777"><i class="bi bi-whatsapp"></i></a>
         </div>
 
       </div>
