--- a/Grandoria/index.html
+++ b/Grandoria/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://imgs.search.brave.com/fGQUDl7YLj-ORXZoHNRQ4cvfdd9zGBST5diK1EnLiYA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cG5nYWxsLmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMi9HLUxl/dHRlci1QTkctSW1h/Z2UucG5n" rel="icon">
+  <link href="https://imgs.search.brave.com/fGQUDl7YLj-ORXZoHNRQ4cvfdd9zGBST5diK1EnLiYA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly93d3cu/cG5nYWxsLmNvbS93/cC1jb250ZW50L3Vw/bG9hZHMvMi9HLUxl/dHRlci1QTkctSW1h/Z2UucG5n" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -134,7 +134,7 @@
                   <h6>Exceptional Experience</h6>
                   <p>"Absolutely stunning residency . The service was impeccable."</p>
                   <div class="guest-info">
-                    <img src="assets/img/person/person-f-3.webp" alt="Guest" class="guest-avatar">
+                    <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1759762561/boowr6itl1k4pzqff9lr.webp" alt="Guest" class="guest-avatar">
                     <span>SUNNY BIJU</span>
                   </div>
                 </div>
