--- a/Grandoria/booking.html
+++ b/Grandoria/booking.html
@@ -199,7 +199,7 @@
 
             <div class="hotel-showcase" data-aos="fade-left" data-aos-delay="400">
               <div class="showcase-image">
-                <img src="assets/img/hotel/showcase-1.webp" alt="Hotel luxury showcase" class="img-fluid">
+                <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1758381639/ix4nbwbcpm2nque7wsrx.webp" alt="Hotel luxury showcase" class="img-fluid">
               </div>
 
               <div class="hotel-highlights">
@@ -232,15 +232,7 @@
                       <p>huge parking space avilable</p>
                     </div>
                   </div>
-                  <div class="highlight-item">
-                    <div class="highlight-icon">
-                      <i class="bi bi-heart-pulse"></i>
-                    </div>
-                    <div class="highlight-content">
-                      <h5>Wellness Center</h5>
-                      <p>Full-service spa and fitness facilities</p>
-                    </div>
-                  </div>
+                  
                 </div>
               </div>
 
