--- a/Grandoria/payment-success.html
+++ b/Grandoria/payment-success.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Payment Successful - Gaurikeerthana Residency</title>
+  <title>Payment Successful - GAURIKEERTHANA RESIDENCY</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -143,7 +143,7 @@
       </div>
       
       <h1 class="text-success mb-3">Payment Successful!</h1>
-      <p class="lead mb-4">Your booking has been confirmed. Thank you for choosing Gaurikeerthana Residency!</p>
+      <p class="lead mb-4">Your booking has been confirmed. Thank you for choosing GAURIKEERTHANA RESIDENCY!</p>
       
       <div class="booking-details" id="bookingDetails">
         <!-- Booking details will be populated by JavaScript -->
@@ -320,7 +320,7 @@
         </head>
         <body>
           <div class="header">
-            <h1>Gaurikeerthana Residency</h1>
+            <h1>GAURIKEERTHANA RESIDENCY</h1>
             <h2>Booking Receipt</h2>
             <p>Thank you for your booking!</p>
           </div>
@@ -371,7 +371,7 @@
             <h2>Total Amount Paid: ₹${bookingData.total.toLocaleString()}</h2>
           </div>
           <div class="footer">
-            <p>Thank you for choosing Gaurikeerthana Residency!</p>
+            <p>Thank you for choosing GAURIKEERTHANA RESIDENCY!</p>
             <p>For any queries, contact us at +91 994779277</p>
           </div>
         </body>
