--- a/Grandoria/about.html
+++ b/Grandoria/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Gaurikeerthana Residency</title>
+  <title>About - GAURIKEERTHANA RESIDENCY</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -215,9 +215,9 @@
         <div class="col-lg-7">
           <div class="content-wrapper" data-aos="fade-left">
             <div class="badge mb-3"><span>About Us</span></div>
-            <h2>Welcome to Gaurikeerthana Residency</h2>
+            <h2>Welcome to GAURIKEERTHANA RESIDENCY</h2>
             <p class="lead">
-              At Gaurikeerthana Residency, we believe a stay in Guruvayoor should feel warm, simple, and homely.
+              At GAURIKEERTHANA RESIDENCY, we believe a stay in Guruvayoor should feel warm, simple, and homely.
             </p>
             <p>
               Located just moments away from the sacred Guruvayoor Temple, we offer comfortable rooms with essential amenities. Whether you’re here for darshan, traveling with family, or visiting, our rooms are designed for convenience and peace of mind.
@@ -293,7 +293,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Gaurikeerthana Residency. All Rights Reserved.</p>
+    <p>© 2025 GAURIKEERTHANA RESIDENCY. All Rights Reserved.</p>
   </footer>
 
   <!-- Scripts -->
