--- a/Grandoria/admin-login.html
+++ b/Grandoria/admin-login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Admin Login - Gaurikeerthana</title>
+  <title>Admin Login - GAURIKEERTHANA</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -173,7 +173,7 @@
   <nav class="navbar navbar-expand-lg admin-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <i class="bi bi-shield-lock me-2"></i>Gaurikeerthana Admin
+        <i class="bi bi-shield-lock me-2"></i>GAURIKEERTHANA Admin
       </a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNav">
@@ -217,7 +217,7 @@
     <div class="admin-login-container fade-in">
     <div class="admin-header">
       <h1><i class="bi bi-shield-lock me-2"></i>Admin Login</h1>
-      <p>Gaurikeerthana Residency Management</p>
+      <p>GAURIKEERTHANA RESIDENCY Management</p>
     </div>
 
     <form id="adminLoginForm">
