--- a/Grandoria/amenities.html
+++ b/Grandoria/amenities.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Amenities - Gaurikeerthana Bootstrap Template</title>
+  <title>Amenities - GAURIKEERTHANA Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -47,7 +47,7 @@
     <div class="branding d-flex align-items-center">
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
-          <h1 class="sitename">Gaurikeerthana</h1>
+          <h1 class="sitename">GAURIKEERTHANA</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -218,7 +218,7 @@
             </a>
             <div class="footer-contact pt-3">
               <p>GAURIKEERTHANA RESIDENCY</p>
-              <p>Gaurikeerthana, Kerala, India</p>
+              <p>GAURIKEERTHANA, Kerala, India</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+91 994779277 , +91 4872081979</span></p>
               <p><strong>Email:</strong> <span>Gaurikeerthanagvyr@gmail.com</span></p>
             </div>
