--- a/Grandoria/contact.html
+++ b/Grandoria/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - Gaurikeerthana Bootstrap Template</title>
+  <title>Contact - GAURIKEERTHANA Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -196,7 +196,7 @@
             </a>
             <div class="footer-contact pt-3">
               <p>GAURIKEERTHANA RESIDENCY</p>
-              <p>Gaurikeerthana, Kerala, India</p>
+              <p>GAURIKEERTHANA, Kerala, India</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+91 994779277 , +91 4872081979</span></p>
               <p><strong>Email:</strong> <span>Gaurikeerthanagvyr@gmail.com</span></p>
             </div>
