--- a/Grandoria/gallery.html
+++ b/Grandoria/gallery.html
@@ -215,11 +215,11 @@
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">Gaurikeerthana</span>
+              <span class="sitename">GAURIKEERTHANA</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>Gaurikeerthana Residency</p>
-              <p>gaurikeerthana , kerala , india</p>
+              <p>GAURIKEERTHANA RESIDENCY</p>
+              <p>GAURIKEERTHANA , Kerala , India</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+91 994779277 , +91 4872081979</span></p>
               <p><strong>Email:</strong> <span>Gaurikeerthanagvyr@gmail.com</span></p>
             </div>
