--- a/Grandoria/room-details.html
+++ b/Grandoria/room-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Room Details - Gaurikeerthana Bootstrap Template</title>
+  <title>Room Details - GAURIKEERTHANA Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -126,8 +126,8 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <a href="mailto:Gaurikeerthanagvyr@gmail.com">Gaurikeerthanagvyr@gmail.com</a>
-          <span class="ms-4">+91 994779277 , +91 4872081979</span>
+          <i><a href="mailto:Gaurikeerthanagvyr@gmail.com">Gaurikeerthanagvyr@gmail.com</a></i>
+          <i><span class="ms-4">+91 994779277 , +91 4872081979</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
           <a href="https://instagram.com/gaurikeerthanaresidency_" class="instagram"><i class="bi bi-instagram"></i></a>
@@ -142,7 +142,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <h1 class="sitename">Gaurikeerthana</h1>
+          <h1 class="sitename">GAURIKEERTHANA</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -216,7 +216,7 @@
                 </div>
                 <p class="room-description flex-grow-1 mb-3">Our Normal Non-AC Room offers a comfortable stay with natural ventilation and essential amenities. Perfect for budget-conscious travelers who enjoy the fresh air and natural cooling of Kerala's pleasant climate. The room features traditional Kerala architecture with modern comforts.</p>
                 <div class="room-amenities mb-3">
-                  <span class="amenity-tag">Up to 2 guests</span>
+                  <!-- <span class="amenity-tag">Up to 2 guests</span> -->
                   <span class="amenity-tag">Free WiFi</span>
                   <span class="amenity-tag">Natural Ventilation</span>
                   <span class="amenity-tag">Basic Furnishing</span>
@@ -229,9 +229,9 @@
                   <h6 class="text-primary mb-2">Room Features:</h6>
                   <ul class="feature-list list-unstyled">
                     <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Traditional Kerala wooden furniture</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Large windows with mosquito nets</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Comfortable double bed with cotton linens</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Working desk and chair</li>
+                    <!-- <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Large windows with mosquito nets</li> -->
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Comfortable double bed </li>
+                    <!-- <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Working desk and chair</li> -->
                     <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Wardrobe and storage space</li>
                   </ul>
                 </div>
@@ -267,24 +267,24 @@
                 </div>
                 <p class="room-description flex-grow-1 mb-3">Our Normal AC Room provides the perfect balance of comfort and affordability. Equipped with modern air conditioning system, this room ensures a cool and comfortable stay throughout your visit. Ideal for guests who prefer controlled temperature and modern amenities.</p>
                 <div class="room-amenities mb-3">
-                  <span class="amenity-tag">Up to 2 guests</span>
+                  <!-- <span class="amenity-tag">Up to 2 guests</span> -->
                   <span class="amenity-tag">Air Conditioning</span>
                   <span class="amenity-tag">Free WiFi</span>
-                  <span class="amenity-tag">Modern Amenities</span>
-                  <span class="amenity-tag">Smart TV</span>
+                  <span class="amenity-tag">Basic Furnishing</span>
+                  <!-- <span class="amenity-tag">Smart TV</span> -->
                   <span class="amenity-tag">Private Bathroom</span>
-                  <span class="amenity-tag">Mini Refrigerator</span>
+                  <!-- <span class="amenity-tag">Mini Refrigerator</span> -->
                   <span class="amenity-tag">Room Service</span>
                 </div>
                 <div class="room-features mb-4">
                   <h6 class="text-primary mb-2">Room Features:</h6>
                   <ul class="feature-list list-unstyled">
                     <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Split AC with remote control</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>32-inch Smart LED TV with satellite channels</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Modern wooden furniture with contemporary design</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Comfortable queen-size bed with premium linens</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Mini refrigerator and electric kettle</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>En-suite bathroom with hot water</li>
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>32-inch Smart LED TV </li>
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>wooden furniture </li>
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Comfortable queen-size bed </li>
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>electric kettle</li>
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>bathroom with hot water</li>
                   </ul>
                 </div>
                 <div class="room-footer mt-auto pt-3 border-top">
@@ -319,24 +319,24 @@
                 </div>
                 <p class="room-description flex-grow-1 mb-3">Our Deluxe AC Room offers the ultimate luxury experience with premium amenities and elegant furnishings. Featuring state-of-the-art air conditioning, modern technology, and sophisticated decor, this room is designed for guests who demand the finest in comfort and style.</p>
                 <div class="room-amenities mb-3">
-                  <span class="amenity-tag">Up to 2 guests</span>
+                  <!-- <span class="amenity-tag">Up to 2 guests</span> -->
                   <span class="amenity-tag">Premium Air Conditioning</span>
                   <span class="amenity-tag">Smart TV & WiFi</span>
                   <span class="amenity-tag">Luxury Furnishing</span>
                   <span class="amenity-tag">King Size Bed</span>
-                  <span class="amenity-tag">Marble Bathroom</span>
+                  <!-- <span class="amenity-tag">Private Bathroom</span> -->
                   <span class="amenity-tag">Room Service</span>
-                  <span class="amenity-tag">Balcony View</span>
+                  <!-- <span class="amenity-tag">Balcony View</span> -->
                 </div>
                 <div class="room-features mb-4">
                   <h6 class="text-primary mb-2">Room Features:</h6>
                   <ul class="feature-list list-unstyled">
                     <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Premium split AC with advanced climate control</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>43-inch Smart LED TV with Netflix and streaming</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>King-size bed with premium mattress and luxury linens</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Marble bathroom with rain shower and premium toiletries</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Private balcony with garden or city view</li>
-                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Mini bar and coffee machine</li>
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>43-inch Smart LED TV </li>
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>King-size bed with premium mattress </li>
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Private bathroom with  shower </li>
+                    <!-- <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>Private balcony with garden or city view</li> -->
+                    <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i> coffee machine</li>
                     <li class="mb-1"><i class="bi bi-check-circle text-success me-2"></i>24/7 concierge service</li>
                   </ul>
                 </div>
@@ -373,7 +373,7 @@
             </a>
             <div class="footer-contact pt-3">
               <p>GAURIKEERTHANA RESIDENCY</p>
-              <p>Gaurikeerthana, Kerala, India</p>
+              <p>GAURIKEERTHANA, Kerala, India</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+91 994779277 , +91 4872081979</span></p>
               <p><strong>Email:</strong> <span>Gaurikeerthanagvyr@gmail.com</span></p>
             </div>
