--- a/Grandoria/rooms.html
+++ b/Grandoria/rooms.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Rooms - Gaurikeerthana Bootstrap Template</title>
+  <title>Rooms - GAURIKEERTHANA Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -43,8 +43,8 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <a href="mailto:Gaurikeerthanagvyr@gmail.com">Gaurikeerthanagvyr@gmail.com</a>
-          <span class="ms-4">+91 994779277 , +91 4872081979</span>
+          <i><a href="mailto:Gaurikeerthanagvyr@gmail.com">Gaurikeerthanagvyr@gmail.com</a></i>
+          <i><span class="ms-4">+91 994779277 , +91 4872081979</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
           <a href="https://instagram.com/gaurikeerthanaresidency_" class="instagram"><i class="bi bi-instagram"></i></a>
@@ -231,7 +231,7 @@
             </a>
             <div class="footer-contact pt-3">
               <p>GAURIKEERTHANA RESIDENCY</p>
-              <p>Gaurikeerthana, Kerala, India</p>
+              <p>GAURIKEERTHANA, Kerala, India</p>
               <p class="mt-3"><strong>Phone:</strong> <span>+91 994779277 , +91 4872081979</span></p>
               <p><strong>Email:</strong> <span>Gaurikeerthanagvyr@gmail.com</span></p>
             </div>
