--- a/index.html
+++ b/index.html
@@ -1900,30 +1900,33 @@
   <script src="assets/js/main.js"></script>
 
   <!-- Firebase Configuration -->
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
-  <script src="firebase-config-simple.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <script src="firebase-service.js"></script>
 
 
 
   <!-- Firebase Initialization Script -->
   <script>
-    // Initialize Firebase and booking service
-    let firebaseInitialized = false;
-    
-    document.addEventListener('DOMContentLoaded', async function() {
-      // Initialize Firebase
-      if (typeof initializeFirebase === 'function') {
-        firebaseInitialized = initializeFirebase();
-        if (firebaseInitialized) {
-          // Initialize booking service
-          window.firebaseBookingService = new FirebaseBookingService();
-          console.log('✅ Firebase and booking service initialized for walk-in booking');
+    // Initialize Firebase when DOM is ready
+    document.addEventListener('DOMContentLoaded', function() {
+      console.log('Initializing Firebase for index page...');
+      
+      // Try to initialize Firebase
+      if (initializeFirebase()) {
+        window.firebaseBookingService = new FirebaseBookingService();
+        const serviceInit = window.firebaseBookingService.init();
+        if (serviceInit) {
+          window.firebaseInitialized = true;
+          console.log('✅ Firebase booking service initialized successfully');
+          console.log('✅ Index page now uses SAME database as booking pages');
         } else {
-          console.warn('⚠️ Firebase initialization failed, using localStorage fallback');
+          window.firebaseInitialized = false;
+          console.error('❌ Firebase booking service initialization failed');
         }
       } else {
-        console.warn('⚠️ Firebase functions not available, using localStorage fallback');
+        window.firebaseInitialized = false;
+        console.error('❌ Failed to initialize Firebase');
       }
     });
   </script>
@@ -1949,7 +1952,7 @@
 
         e.preventDefault();
 
-        openWalkInBookingModal();
+        window.open('walkin-booking.html', '_blank');
 
       }
 
